--- a/phpgwapi/templates/bookingfrontend_2/styleguide/menu/menu.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/menu/menu.scss
@@ -12,7 +12,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    font-weight: $text-normal;
+    font-weight: $text-regular;
     padding: 0.25rem 1.5rem 0.25rem 0.5rem;    
 
     &:hover span.text {
