--- a/phpgwapi/templates/bookingfrontend_2/styleguide/pill/pill.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/pill/pill.scss
@@ -64,7 +64,7 @@
     padding-left: 15px;
     grid-area: date;
     padding-right: 10px;
-    font-weight: bold;
+    font-weight: $text-bold;
   }
 
 
