--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -780,6 +780,39 @@ h4, .h4 {
   }
 }
 
+.font-size-h1 {
+  height: 4.25rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h1 {
+    height: 2.75rem;
+  }
+}
+.font-size-h2 {
+  height: 2.75rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h2 {
+    height: 1.875rem;
+  }
+}
+.font-size-h3 {
+  height: 1.625rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h3 {
+    height: 1.5rem;
+  }
+}
+.font-size-h4 {
+  height: 1.75rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h4 {
+    height: 1.375rem;
+  }
+}
+
 .text-small {
   font-size: 0.875rem;
   line-height: 1.25rem;
