--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -802,6 +802,39 @@ h4, .h4 {
   }
 }
 
+.font-size-h1 {
+  height: 4.25rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h1 {
+    height: 2.75rem;
+  }
+}
+.font-size-h2 {
+  height: 2.75rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h2 {
+    height: 1.875rem;
+  }
+}
+.font-size-h3 {
+  height: 1.625rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h3 {
+    height: 1.5rem;
+  }
+}
+.font-size-h4 {
+  height: 1.75rem;
+}
+@media (max-width: 1024px) {
+  .font-size-h4 {
+    height: 1.375rem;
+  }
+}
+
 .text-small {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -2611,7 +2644,7 @@ textarea {
   padding-left: 15px;
   grid-area: date;
   padding-right: 10px;
-  font-weight: bold;
+  font-weight: 700;
 }
 .pill .pill-divider {
   grid-area: divider;
