--- a/phpgwapi/templates/bookingfrontend_2/styleguide/link/link.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/link/link.scss
@@ -1,6 +1,6 @@
 @mixin pill() {
   padding: 0.713rem 1.5rem;
-  border: 1px solid $grey-light;
+  border: 1px solid $grey;
   border-radius: $rounded-large;
   color: $black;
   background-color: $white;
