--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -844,6 +844,16 @@ h4, .h4 {
     line-height: 1.5rem;
   }
 }
+.text-label {
+  font-size: 1rem;
+  line-height: 1.25rem;
+}
+@media (max-width: 1024px) {
+  .text-label {
+    font-size: 0.875rem;
+    line-height: 1.125rem;
+  }
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.625rem;
