--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -866,6 +866,16 @@ h4, .h4 {
     line-height: 1.5rem;
   }
 }
+.text-label {
+  font-size: 1rem;
+  line-height: 1.25rem;
+}
+@media (max-width: 1024px) {
+  .text-label {
+    font-size: 0.875rem;
+    line-height: 1.125rem;
+  }
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.625rem;
@@ -1167,7 +1177,7 @@ a.link-text-secondary:hover {
 }
 a.link-button {
   padding: 0.713rem 1.5rem;
-  border: 1px solid #F5F5F5;
+  border: 1px solid #D6D6D6;
   border-radius: 3.125rem;
   color: #000000;
   background-color: #FFFFFF;
@@ -1338,13 +1348,13 @@ a.link-button--transparent {
 
 input[type=text], textarea {
   padding: 0.713rem 1.5rem;
-  border: 1px solid #F5F5F5;
+  border: 1px solid #D6D6D6;
   border-radius: 3.125rem;
   color: #000000;
   background-color: #FFFFFF;
   line-height: 1.2;
-  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.15);
   -webkit-appearance: none;
+  border-radius: 0.25rem;
 }
 input[type=text]:focus, textarea:focus {
   outline: none;
@@ -2605,7 +2615,7 @@ textarea {
 }
 .pill--secondary {
   --main-divider-opacity: 20%;
-  --main-bg-color: #dfd0e3;
+  --main-bg-color: #faf7fa;
   --main-divider-color: #793C8A;
   --main-text-color: #793C8A;
 }
