--- a/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
@@ -142,6 +142,10 @@ h4, .h4 {
     @include applyFontProperties('body');
   }
 
+  &-label {
+    @include applyFontProperties('label');
+  }
+
   &-xl {
     @include applyFontProperties('title');
   }
