--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -827,6 +827,7 @@ h4, .h4 {
   font-size: 0.75rem;
   line-height: 1.375rem;
   text-transform: uppercase;
+  font-weight: 400;
 }
 @media (max-width: 1024px) {
   .text-overline {
