--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -849,6 +849,7 @@ h4, .h4 {
   font-size: 0.75rem;
   line-height: 1.375rem;
   text-transform: uppercase;
+  font-weight: 400;
 }
 @media (max-width: 1024px) {
   .text-overline {
@@ -1944,18 +1945,18 @@ textarea {
   flex-direction: column;
   background: transparent;
   border-radius: 3.125rem;
-  color: #793C8A;
-  font-size: 1.125rem;
+  color: #333333;
+  font-size: 1.25rem;
   text-align: left;
   position: relative;
-  font-weight: 900;
+  font-weight: 700;
   width: 100%;
   padding: 1rem 3rem 1rem 2rem;
   border: 0;
 }
 @media (max-width: 1024px) {
   .slidedown__toggler {
-    font-size: 1rem;
+    font-size: 1.125rem;
   }
 }
 @media (min-width: 768px) {
