--- a/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+
 $medium-screen: 1024px;
 
 $text-regular: 400;
@@ -17,55 +18,56 @@ $text-bolder: 900;
 }
 
 
-
 // name: (SIZE, HEIGHT)
 $desktop: (
-    display: (3.5rem, 4.25rem),
-    headline: (2.25rem, 2.75rem),
-    title: (1.25rem, 1.625rem),
-    subtitle: (1.125rem, 1.75rem),
-    label: (1rem, 1.25rem),
-    overline: (0.75rem, 1.375rem),
-    body: (1rem, 1.75rem),
-    caption: (0.875rem, 1.25rem)
+        display: (3.5rem, 4.25rem),
+        headline: (2.25rem, 2.75rem),
+        title: (1.25rem, 1.625rem),
+        subtitle: (1.125rem, 1.75rem),
+        label: (1rem, 1.25rem),
+        overline: (0.75rem, 1.375rem),
+        body: (1rem, 1.75rem),
+        caption: (0.875rem, 1.25rem),
+        tiny: (0.6875rem, 1.1),
 );
 
 $mobile: (
-    display: (2.125rem, 2.75rem),
-    headline: (1.5rem, 1.875rem),
-    title: (1.125rem, 1.5rem),
-    subtitle: (1rem, 1.375rem),
-    label: (0.875rem, 1.125rem),
-    overline: (0.625rem, 1.25rem),
-    body: (0.875rem, 1.5rem),
-    caption: (0.75rem, 1.125rem)
+        display: (2.125rem, 2.75rem),
+        headline: (1.5rem, 1.875rem),
+        title: (1.125rem, 1.5rem),
+        subtitle: (1rem, 1.375rem),
+        label: (0.875rem, 1.125rem),
+        overline: (0.625rem, 1.25rem),
+        body: (0.875rem, 1.5rem),
+        caption: (0.75rem, 1.125rem),
+        tiny: (0.6875rem, 1.1),
 );
 
 
 @mixin applyFontProperties($type) {
-    font-size: getFontDef($desktop, $type, 'size');
-    line-height: getFontDef($desktop, $type, 'height');
+  font-size: getFontDef($desktop, $type, 'size');
+  line-height: getFontDef($desktop, $type, 'height');
 
-    @include small-screen {
-        font-size: getFontDef($mobile, $type, 'size');
-        line-height: getFontDef($mobile, $type, 'height');
-    }
+  @include small-screen {
+    font-size: getFontDef($mobile, $type, 'size');
+    line-height: getFontDef($mobile, $type, 'height');
+  }
 }
 
 @mixin applyLineHeights($type) {
-    line-height: getFontDef($desktop, $type, 'height');
+  line-height: getFontDef($desktop, $type, 'height');
 
-    @include small-screen {
-        line-height: getFontDef($mobile, $type, 'height');
-    }
+  @include small-screen {
+    line-height: getFontDef($mobile, $type, 'height');
+  }
 }
 
 @mixin applyFontSize($type) {
-    font-size: getFontDef($desktop, $type, 'size');
+  font-size: getFontDef($desktop, $type, 'size');
 
-    @include small-screen {
-        font-size: getFontDef($mobile, $type, 'size');
-    }
+  @include small-screen {
+    font-size: getFontDef($mobile, $type, 'size');
+  }
 }
 
 
@@ -131,6 +133,7 @@ h4, .h4 {
       height: getFontDef($mobile, 'subtitle', 'height');
     }
   }
+
   &-small {
     $desktop-height: strip-unit(getFontDef($desktop, 'caption', 'height')) * 0.75 + rem;
     height: $desktop-height;
