Fixes to collapse, and popper now hides if another one is opened

--- a/phpgwapi/templates/bookingfrontend_2/styleguide/collapsable-text/collapsable-text.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/collapsable-text/collapsable-text.scss
@@ -6,6 +6,9 @@
 
 .collapsed-description {
   max-height: 9.55em; /* 3 lines */
+}
+
+.collapsed-description-fade {
   &::after {
     content: '';
     width: 100%;
