shopping cart and multi search

--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
@@ -21,3 +21,4 @@
 @import 'articles-table/articles-table.scss';
 @import 'light-box/light-box.scss';
 @import 'collapsable-text/collapsable-text.scss';
+@import 'shopping-cart/shopping-cart.scss';
