--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -3077,4 +3077,21 @@ textarea {
   right: 0;
 }
 
+div#applications-cart-content {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  right: 0;
+  background-color: #FFFFFF;
+  border: 1px solid #dfd0e3;
+  margin-right: 10px;
+  padding: 0;
+  z-index: 100;
+  width: 27%;
+  min-width: 480px;
+  max-height: 100%;
+  overflow-y: scroll;
+}
+
 /*# sourceMappingURL=main.css.map */
