--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
@@ -22,3 +22,4 @@
 @import 'light-box/light-box.scss';
 @import 'collapsable-text/collapsable-text.scss';
 @import 'shopping-cart/shopping-cart.scss';
+@import 'dialogs/dialog.scss';
