--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -3110,8 +3110,11 @@ div#applications-cart-content {
 }
 
 .dialog-container {
-  background-color: #D6D6D6;
+  background-color: #FFFFFF;
   border-radius: 0.5rem;
+  border-color: purple;
+  border-width: 1px;
+  border-style: solid;
   padding: 1.5rem;
   max-width: min(90vw, 840px);
   width: max-content;
