--- a/phpgwapi/templates/bookingfrontend_2/styleguide/dialogs/dialog.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/dialogs/dialog.scss
@@ -1,7 +1,10 @@
 
 .dialog-container {
-  background-color: $grey;
+  background-color: $white;
   border-radius: $rounded-mini;
+  border-color: purple;
+  border-width: 1px;
+  border-style: solid;
   //box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
   //max-width: 400px;
