--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -1354,10 +1354,17 @@ h4, .h4 {
   }
 }
 .calendar .calendar-body .event button {
-  height: 24px;
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+.calendar .calendar-body .event-no-title {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.calendar .calendar-body .event-no-title .event-title {
+  display: none;
 }
 .calendar .calendar-body .weekend {
   background-color: #f1f3f4;
@@ -1370,6 +1377,21 @@ h4, .h4 {
 }
 .calendar .calendar-body .dots-container i {
   color: white;
+}
+.calendar .calendar-body .dots-container {
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(3em - 10px); /* Adjust as needed */
+}
+.calendar .calendar-body .dots-container i {
+  font-size: 150%; /* Ensures the icon scales with the container */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .calendar .calendar-body .event-allocation {
   background-color: #E6E3DB;
@@ -1425,52 +1447,6 @@ h4, .h4 {
 .calendar .calendar-body .event-temporary::after {
   bottom: 0; /* Position the ::after element at the bottom */
 }
-.calendar .calendar-body .event-temporary .dots-container {
-  height: 16px;
-  width: 16px;
-}
-.calendar .calendar-body .event-temporary .dots-container i {
-  color: white;
-}
-.calendar .calendar-body .event-small {
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-right: 10px;
-  font-size: 0.6875rem;
-  line-height: 1.1;
-  border-width: 0;
-  border-radius: 2px;
-  z-index: 1000;
-}
-@media (max-width: 1024px) {
-  .calendar .calendar-body .event-small {
-    font-size: 0.6875rem;
-    line-height: 1.1;
-  }
-}
-.calendar .calendar-body .event-small > div:first-child {
-  display: flex;
-  flex-direction: row;
-}
-.calendar .calendar-body .event-small > div:first-child > div {
-  font-size: inherit;
-  display: flex;
-  flex-direction: row;
-}
-.calendar .calendar-body .event-small > div:first-child > div:not(:last-child):after {
-  content: ","; /* Insert a comma as content */
-  margin-right: 0.25em; /* Add margin after the content */
-}
-.calendar .calendar-body .event-small > div:first-child > div:nth-child(1) {
-  font-size: inherit;
-}
-.calendar .calendar-body .event-small .dots-container {
-  height: 10px;
-  width: 10px;
-}
-.calendar .calendar-body .event-small .dots-container i {
-  color: white;
-}
 .calendar .calendar-body .available-slot {
   border-color: #FFF;
   z-index: 4;
@@ -1491,13 +1467,6 @@ h4, .h4 {
 .calendar .calendar-body .available-slot.disabled {
   cursor: not-allowed;
   opacity: 0.75;
-}
-.calendar .calendar-body .available-slot .dots-container {
-  height: 16px;
-  width: 16px;
-}
-.calendar .calendar-body .available-slot .dots-container i {
-  color: white;
 }
 .calendar .calendar-body .info {
   padding: 1.5rem;
