--- a/phpgwapi/js/pecalendar/pecalendar.scss
+++ b/phpgwapi/js/pecalendar/pecalendar.scss
@@ -455,10 +455,19 @@ $column-width: 12; // how many columns in a given timeslot
       }
 
       button {
-        height: 24px;
+        //height: 24px;
         background-color: transparent;
         border: none;
         cursor: pointer;
+      }
+    }
+
+    .event-no-title {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      .event-title {
+        display: none;
       }
     }
 
@@ -475,6 +484,21 @@ $column-width: 12; // how many columns in a given timeslot
 
       i {
         color: white;
+      }
+    }
+    .dots-container {
+      align-self: stretch;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: calc(#{$time-height} - 10px); /* Adjust as needed */
+      i {
+        font-size: 150%; /* Ensures the icon scales with the container */
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
 
@@ -551,63 +575,54 @@ $column-width: 12; // how many columns in a given timeslot
         bottom: 0; /* Position the ::after element at the bottom */
       }
 
-      .dots-container {
-        height: 16px;
-        width: 16px;
-
-        i {
-          color: white;
-        }
-
-      }
     }
 
 
-    .event-small {
-      padding-top: 0;
-      padding-bottom: 0;
-      padding-right: 10px;
-      @include applyFontProperties('tiny');
-      border-width: 0;
-      border-radius: 2px;
-      z-index: 1000;
-
-      > div:first-child {
-        display: flex;
-        flex-direction: row;
-
-
-        > div {
-          font-size: inherit;
-          display: flex;
-          flex-direction: row;
-
-          &:not(:last-child) {
-            &:after {
-              content: ","; /* Insert a comma as content */
-              margin-right: .25em; /* Add margin after the content */
-            }
-          }
-        }
-
-        > div:nth-child(1) {
-          font-size: inherit;
-          //@extend .text-bold;
-        }
-
-
-      }
-
-      .dots-container {
-        height: 10px;
-        width: 10px;
-
-        i {
-          color: white;
-        }
-
-      }
-    }
+    //.event-small {
+    //  padding-top: 0;
+    //  padding-bottom: 0;
+    //  padding-right: 10px;
+    //  @include applyFontProperties('tiny');
+    //  border-width: 0;
+    //  border-radius: 2px;
+    //  z-index: 1000;
+    //
+    //  > div:first-child {
+    //    display: flex;
+    //    flex-direction: row;
+    //
+    //
+    //    > div {
+    //      font-size: inherit;
+    //      display: flex;
+    //      flex-direction: row;
+    //
+    //      &:not(:last-child) {
+    //        &:after {
+    //          content: ","; /* Insert a comma as content */
+    //          margin-right: .25em; /* Add margin after the content */
+    //        }
+    //      }
+    //    }
+    //
+    //    > div:nth-child(1) {
+    //      font-size: inherit;
+    //      //@extend .text-bold;
+    //    }
+    //
+    //
+    //  }
+    //
+    //  .dots-container {
+    //    height: 10px;
+    //    width: 10px;
+    //
+    //    i {
+    //      color: white;
+    //    }
+    //
+    //  }
+    //}
 
     .available-slot {
       @extend .bg-yellow-light;
@@ -645,15 +660,7 @@ $column-width: 12; // how many columns in a given timeslot
       //resize: vertical;
       //overflow: auto;
 
-      .dots-container {
-        height: 16px;
-        width: 16px;
 
-        i {
-          color: white;
-        }
-
-      }
     }
 
     .info {
